--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="container">
             <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Capitais</h3>
+                    <h3>CAPITAIS</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Qual é a capital do estado do Rio Grande do Sul?</p>
                     </div>
